// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/DefaultText test DefaultText component 1`] = `
<Text
  style={
    [
      {
        "color": "#818181",
      },
      undefined,
      undefined,
    ]
  }
>
  Test
</Text>
`;

exports[`components/DefaultText test DefaultText component: check bold 1`] = `
<Text
  style={
    [
      {
        "color": "#818181",
      },
      {
        "fontWeight": "bold",
      },
      undefined,
    ]
  }
>
  Test
</Text>
`;

exports[`components/DefaultText test DefaultText component: check nested 1`] = `
[
  <Text
    style={
      [
        {
          "color": "#818181",
        },
        undefined,
        {
          "color": "orange",
        },
      ]
    }
  >
    Test
    <Text
      style={
        [
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Test
    </Text>
  </Text>,
  <Text
    style={
      [
        {
          "color": "#818181",
        },
        undefined,
        {
          "color": "orange",
        },
      ]
    }
  >
    Test
    <Text
      style={
        [
          {
            "color": "#818181",
          },
          undefined,
          undefined,
        ]
      }
    >
      Test
    </Text>
  </Text>,
]
`;
